--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ server {
   listen 80;
 
   location / {
-    root /usr/share/nginx/html/public;
+    root /usr/share/nginx/html/;
     include /etc/nginx/mime.types;
-    try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ $uri/public /index.html;
   }
 }
